; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_sstate.c_sstate_reboot_call.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_sstate.c_sstate_reboot_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }

@rebooting_msg = common dso_local global i8* null, align 8
@halting_msg = common dso_local global i8* null, align 8
@poweroff_msg = common dso_local global i8* null, align 8
@HV_SOFT_STATE_TRANSITION = common dso_local global i32 0, align 4
@NOTIFY_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @sstate_reboot_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sstate_reboot_call(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i64, i64* %5, align 8
  switch i64 %8, label %10 [
    i64 130, label %9
    i64 129, label %12
    i64 128, label %14
  ]

9:                                                ; preds = %3
  br label %10

10:                                               ; preds = %3, %9
  %11 = load i8*, i8** @rebooting_msg, align 8
  store i8* %11, i8** %7, align 8
  br label %16

12:                                               ; preds = %3
  %13 = load i8*, i8** @halting_msg, align 8
  store i8* %13, i8** %7, align 8
  br label %16

14:                                               ; preds = %3
  %15 = load i8*, i8** @poweroff_msg, align 8
  store i8* %15, i8** %7, align 8
  br label %16

16:                                               ; preds = %14, %12, %10
  %17 = load i32, i32* @HV_SOFT_STATE_TRANSITION, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @do_set_sstate(i32 %17, i8* %18)
  %20 = load i32, i32* @NOTIFY_OK, align 4
  ret i32 %20
}

declare dso_local i32 @do_set_sstate(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
